--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Toronto Region Transit Service notices in one place"
-      content="Web site created using create-react-app"
+      name="Toronto Ontario regional transit service notices in one place"
+      content="get your custom list of toronto service notices, distruptions, and cancellations"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rapid</title>
+    <title>TransitWorks</title>
   </head>
   <body className="dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
